# GranuloTrack

./: .gitignore  README.md
benchmark/: README.md
benchmark/CPU/: README.md  WorkLoad_1.c  WorkLoad_2.c
benchmark/CVE/: README.md
benchmark/IO/: README.md  Read.c  Write.c
benchmark/MEMORY/: ByteArray.py  Malloc.c  README.md
benchmark/MEMORY/kmalloc/: Makefile  Test.c  kmalloc_lkm.c
readings/: README.md
readings/chrome/: README.md
readings/cve_attack/: README.md
readings/deathstarbench/: README.md
readings/load_balancer/: GranuloTrack.csv  Htop.csv  Nginx.csv  README.md
readings/overhead/: APP.csv  CPU.csv  MEM.csv  README.md
readings/rocksdb/: README.md
readings/syslog/: README.md
readings/tcp_syn_flood/: README.md
readings/workload/: README.md
readings/workload/CPU/: README.md  W1_GT_GDB_PERF_INSTRUCTION_COUNT.csv  W2_GT_PERF_INST.csv  W2_GT_PERF_TIME_TIME.csv
readings/workload/IO/: LATENCY.csv  README.md
readings/workload/MEMORY/: DATA.csv  README.md
setup/: README.md
setup/CPU/: CPU_Load_Generator.c  Makefile  README.md  WorkLoad_1.c  WorkLoad_2.c
setup/CVE/: POC.html  README.md
setup/IO/: Makefile  README.md  Read.c  Write.c
setup/MEMORY/: ByteArray.py  Makefile  Malloc.c  Memory_Rate_Generator.c  README.md
setup/MEMORY/kmalloc/: Test.c  kmalloc_lkm.c
setup/chrome/: README.md
setup/deathstarbench/: README.md
setup/load_balancer/: CMakeLists.txt  README.md  client.py  corepulse_server_monitor.py  htop_server_monitor.py  install.sh  nginx_least_time.conf  start_apache.sh  start_nginx_lb.sh  stop_nginx_lb.sh
setup/load_balancer/config/: config_granulotrack.json  config_htop.json
setup/load_balancer/config/server/: server1.json  server2.json  server3.json  server4.json
setup/load_balancer/include/: config.h  connection_pool.h  http_handler.h  load_balancer.h  server_manager.h
setup/load_balancer/src/: config_parser.cpp  connection_pool.cpp  http_handler.cpp  load_balancer.cpp  main.cpp  server_manager.cpp
setup/real_world_apps/: README.md  install.sh
setup/real_world_apps/mysql/: Makefile  README.md  client.cpp  mysql_test.conf  start_server.sh  stop_server.sh
setup/real_world_apps/nginx/: Makefile  README.md  client.cpp  nginx_test.conf  sample.html  start_server.sh  stop_server.sh
setup/real_world_apps/redis/: Makefile  README.md  client.cpp  redis_test.conf  start_server.sh  stop_server.sh
setup/rocksdb/: README.md  benchmark.sh  clean.sh  install.sh
setup/rocksdb/rocksdb-5.18.3/db/: compaction_iteration_stats.h
src/: CorePulse.py  DiskFlow.py  MemTracker_Kernel.py  MemTracker_User.py  README.md
